Skip to content

Assert when playing linked MKV

VLC crashes while playing linked MKV files. The crash occurs at the moment when one file should be switched to another.

How to test it

(Tried with ffmpeg 3.4.2, mkvtoolnix 21.0.0, libmatroska 1.4.8, libebml 1.3.5)

ffmpeg -f lavfi -i testsrc -t 0:05 -c:v libx264 test1.mkv
ffmpeg -f lavfi -i testsrc2 -t 0:05 -c:v libx264 test2.mkv
mkvmerge --link-to-previous =test1.mkv -o test.mkv test2.mkv
open test.mkv

Excpected result

The clip plays from start to end.

Actual result

VLC crashes at the moment of switching to the next file.

Affected versions

VLC 3.0.1; VLC 3.0.2 nightly build 20180329-0644; VLC 4.0.0 nightly build 20180329-0404-dev

Crashed at

0 libmkv_plugin.dylib 0x0000000113e8d1e9 virtual_segment_c::UpdateCurrentToChapter(demux_t&) + 377

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information