demux:mkv: fix crash on dummy edition

Fixes #20196